crates/apollo-compiler/test_data/diagnostics/0089_fragment_type_condition_on_non_existent_types.txt
Error: cannot find fragment `invalidFragmentCondition` in this document
   ╭─[0089_fragment_type_condition_on_non_existent_types.graphql:3:5]
   │
 3 │     ...invalidFragmentCondition
   │     ─────────────┬─────────────  
   │                  ╰─────────────── fragment `invalidFragmentCondition` is not defined
───╯
Error: type condition `MissingSecondType` of inline fragment is not a type defined in the schema
   ╭─[0089_fragment_type_condition_on_non_existent_types.graphql:5:12]
   │
 5 │     ... on MissingSecondType {
   │            ────────┬────────  
   │                    ╰────────── type condition here
   │ 
   │ Note: path to the inline fragment: `query Query → interface → ...`
───╯
Error: type condition `MissingType` of inline fragment is not a type defined in the schema
    ╭─[0089_fragment_type_condition_on_non_existent_types.graphql:23:10]
    │
 23 │   ... on MissingType {
    │          ─────┬─────  
    │               ╰─────── type condition here
    │ 
    │ Note: path to the inline fragment: `fragment invalidInlineFragment → ...`
────╯
Error: type condition `Interface2` of fragment `invalidFragmentCondition` is not a type defined in the schema
    ╭─[0089_fragment_type_condition_on_non_existent_types.graphql:28:38]
    │
 28 │ fragment invalidFragmentCondition on Interface2 {
    │                                      ─────┬────  
    │                                           ╰────── type condition here
────╯

